--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body>
+<body class="bgImg" style="background-size: auto; background-repeat: no-repeat; background-attachment: fixed;">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
